RESOLVED FIXED187873
REGRESSION (r233974): Cannot close pip'd video; pops back into PiP.
https://bugs.webkit.org/show_bug.cgi?id=187873
Summary REGRESSION (r233974): Cannot close pip'd video; pops back into PiP.
Jer Noble
Reported 2018-07-20 15:53:24 PDT
REGRESSION (r233974): Cannot close pip'd video; pops back into PiP.
Attachments
Patch (2.00 KB, patch)
2018-07-20 15:56 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2018-07-20 15:54:00 PDT
Jer Noble
Comment 2 2018-07-20 15:56:32 PDT
Jon Lee
Comment 3 2018-07-20 16:31:03 PDT
Comment on attachment 345485 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=345485&action=review > Source/WebCore/platform/mac/VideoFullscreenInterfaceMac.mm:-338 > - // FIXME 25096170: Should animate only if the page with the video is unobscured. For now, always close without animation. If this comment is going away, are we closing the associated also?
Jer Noble
Comment 4 2018-07-20 17:13:34 PDT
(In reply to Jon Lee from comment #3) > Comment on attachment 345485 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=345485&action=review > > > Source/WebCore/platform/mac/VideoFullscreenInterfaceMac.mm:-338 > > - // FIXME 25096170: Should animate only if the page with the video is unobscured. For now, always close without animation. > > If this comment is going away, are we closing the associated also? That comment was never right; this method only gets called when the "stop" button is clicked, so there is no animation.
WebKit Commit Bot
Comment 5 2018-07-20 17:42:27 PDT
Comment on attachment 345485 [details] Patch Clearing flags on attachment: 345485 Committed r234078: <https://trac.webkit.org/changeset/234078>
WebKit Commit Bot
Comment 6 2018-07-20 17:42:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.